# mini-oems

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  Containerfile  Doxyfile  README.ja.md  README.md  flake.nix  justfile
.github/: pull_request_template.md
.github/workflows/: ci.yml
bench/: matching_bench.cc  order_manager_bench.cc
docs/: architecture.ja.md  architecture.md  fix-latest-guide.ja.md  fix-latest-guide.md  openapi.yaml
docs/doxygen/: docs-i18n-map.js  header.html  i18n-switcher.css  i18n-switcher.js
scripts/: open-docs.sh  run-localized-doxygen.sh  write-docs-i18n-map.sh
src/: main.cc
src/api-gen/.openapi-generator/: FILES
src/api-gen/api/: BooksApi.hpp  ExecutionsApi.hpp  HealthApi.hpp  OrdersApi.hpp
src/api-gen/model/: ApiError.hpp  Book.hpp  Fill.hpp  Health.hpp  NewOrderRequest.hpp  Order.hpp  OrderStatus.hpp  OrderType.hpp  PriceLevel.hpp  Side.hpp
src/cli/: main.cc
src/core/algo/: algo_engine.cc  algo_engine.h  twap.cc  twap.h  vwap.cc  vwap.h
src/core/api/: oems_controllers.cpp  oems_controllers.hpp
src/core/fix/: fix_gateway.cc  fix_gateway.h  fix_message.cc  fix_message.h  fix_session.cc  fix_session.h
src/core/market_data/: market_data_handler.cc  market_data_handler.h
src/core/matching/: matching_engine.cc  matching_engine.h  order_book.cc  order_book.h
src/core/order/: order.h  order_event.h  order_manager.cc  order_manager.h
src/core/persistence/: database.cc  database.h
src/core/risk/: risk_manager.cc  risk_manager.h
src/core/types/: error.h  instrument.h  types.h
test/: sanity_test.cc
test/integration/: order_flow_test.cc  recovery_test.cc
test/system/: system_test.cc
test/unit/algo/: twap_test.cc  vwap_test.cc
test/unit/cli/: main_test.cc
test/unit/fix/: fix_gateway_test.cc  fix_message_test.cc  fix_session_test.cc
test/unit/market_data/: market_data_handler_test.cc
test/unit/matching/: matching_engine_test.cc  order_book_test.cc
test/unit/order/: order_manager_test.cc  order_test.cc
test/unit/persistence/: database_test.cc
test/unit/risk/: risk_manager_test.cc  symbol_config_test.cc
test/unit/types/: types_test.cc
